# Solana-AMM-Dex

./: .env  .gitignore  ACCOUNT_ORDER_VISUAL.txt  Anchor.toml  BUG_FIX_SUMMARY.md  CLOSE_TO_ZERO_EXPLANATION.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_WORKFLOW.md  DEVNET_DEPLOYMENT.md  DEVNET_SETUP_COMPLETE.md  DOCUMENTATION_GUIDE.md  DUST_RESERVE_FIX_COMPLETE.md  FEE_ANALYSIS_FROM_TRANSACTIONS.md  FEE_CALCULATION_VISUAL.txt  FEE_SYSTEM_QUICK_REF.md  FILES_CREATED.txt  FIX_NODE_VERSION.sh  FRESH_DEPLOYMENT_GUIDE.md  FRONTEND_FIX_INSTRUCTIONS.md  FRONTEND_INTEGRATION_INSTRUCTIONS.md  FRONTEND_INTEGRATION_SIMPLE.md  FRONTEND_KEDOLOG_FEE_FIX.md  FRONTEND_UPDATE_REQUIRED.md  IMPLEMENTATION_COMPLETE.md  KEDOLIK_DEX_GUIDE.md  KEDOLOG_FEE_BUG_ANALYSIS.md  KEDOLOG_FEE_FIX_DEPLOYED.md  KEDOLOG_FEE_ISSUE_RESOLVED.md  K_TOKEN_FEE_IMPLEMENTATION.md  LP_TOKEN_VERIFICATION_GUIDE.md  MAINNET_DEPLOYMENT.md  POOL_PRICING_IMPLEMENTATION.md  PRICE_SCALE_BUG_FIX.md  QUICK_START.md  QUICK_SUMMARY.md  README.md  REAL_FEE_ISSUE_IDENTIFIED.md  SECURITY.md  (+43 more)
client/: Cargo.toml
programs/cp-swap/: Cargo.toml
programs/cp-swap/src/: error.rs  lib.rs  price_oracle.rs
programs/cp-swap/src/instructions/: deposit.rs  initialize.rs  initialize_with_permission.rs  mod.rs  set_lp_token_metadata.rs  swap_base_input_with_protocol_token.rs  swap_with_k_token.rs  (+1 more)
staking-locking/: Anchor.toml  Cargo.toml  README.md  tsconfig.json
staking-locking/deployments/: FRONTEND_STAKE_LOCK_V1.md  MAINNET_DEPLOYMENT.md  create-devnet-test-token.sh  create-mainnet-lock.js  deploy-devnet-programs.sh  deploy-mainnet-stake-lock.sh  devnet-lean-staking-1777923694977.json  devnet-lean-staking-1777925778090.json  devnet-lean-staking-latest.json  devnet-live-summary.json  devnet-locker-live-1776665164595.json  devnet-locker-live.json  devnet-prepared.json  devnet-staking-live-1776664592400.json  devnet-staking-live.json  frontend-devnet-live.ts  frontend-devnet.ts  frontend-stake-lock-v1-devnet.ts  initialize-devnet-staking-admin.js  initialize-mainnet-staking-admin.js  kedolik_stake_lock.devnet.idl.json  kedolik_stake_lock.mainnet.idl.json  mainnet-admin-config.json  mainnet-deploy-latest.json  setup-devnet-lean-staking.js  setup-devnet-locker.js  setup-devnet-staking.js  setup-mainnet-lean-staking.js  transfer-devnet-staking-admin.js  transfer-mainnet-staking-admin.js
staking-locking/locker-workspace/: Anchor.toml  Cargo.toml
staking-locking/locker-workspace/merkle-verify/: Cargo.toml
staking-locking/merkle-verify/src/: lib.rs
staking-locking/notes/: BUILD_STATUS.md  SOURCE_BASELINES.md
staking-locking/programs/kedolik-locker-v1/: Cargo.toml
staking-locking/programs/kedolik-mint-wrapper-v1/: Cargo.toml  README.md
staking-locking/programs/kedolik-stake-lock-v1/: Cargo.toml
staking-locking/programs/kedolik-staking-v1/: Cargo.toml  README.md
staking-locking/quarry-workspace/: Anchor.toml  Cargo.toml
staking-locking/tests/: kedolik_stake_lock.test.ts
staking-locking/upstream-licenses/: JUP-LOCK-LICENSE-NOTE.md
(+191 files in other folders)
