[workspace]
resolver = "2"
members = ["programs/kedolik-stake-lock-v1"]

[workspace.package]
edition = "2021"
version = "0.0.1"

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", default-features = false }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
