[workspace]
resolver = "2"
members = ["programs/*", "merkle-verify"]

[workspace.package]
edition = "2021"
version = "0.0.1"

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
