[package]
name = "kedolik-stake-lock"
version = "0.1.0"
description = "Lean SPL staking and time-locking program for Kedolik"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kedolik_stake_lock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "anchor-spl/token_2022"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, default-features = false, features = ["token"] }
