[package]
name = "quarry-mint-wrapper"
version = "5.3.0"
description = "Mints tokens to authorized accounts"
edition = "2021"
homepage = "https://quarry.so"
repository = "https://github.com/QuarryProtocol/quarry"
authors = ["Quarry Protocol <team@quarry.so>"]
license = "AGPL-3.0"
keywords = ["solana", "quarry"]

[lib]
crate-type = ["cdylib", "lib"]
name = "quarry_mint_wrapper"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", default-features = false, features = ["token"] }
solana-security-txt = "1.0.1"
tensor-vipers = "1.0.1"
